# sum-buddy

./: .pre-commit-config.yaml  .zenodo.json  CITATION.cff  README.md  pyproject.toml
.github/workflows/: run-tests.yml
examples/: .sbignore_all_except_subdir  .sbignore_all_except_subdir_but_ignore_hidden  .sbignore_except_txt  .sbignore_specific_file  .sbignore_specific_subdir_file  .sbignore_subdir  checksums.csv  run_examples.bash
examples/expected_outputs/: default.csv  ignore_all.csv  ignore_all_except_dots.csv  ignore_all_except_subdir.csv  ignore_all_except_subdir_but_ignore_hidden.csv  ignore_except_txt.csv  ignore_specific_file.csv  ignore_specific_subdir_file.csv  ignore_subdir.csv  ignore_txt.csv  include_hidden_true.csv  include_recursive_file_txt.csv
scripts/: generate_fixtures.py
src/sumbuddy/: __init__.py  __main__.py  archive.py  exceptions.py  filter.py  hasher.py  mapper.py
tests/: .sbinclude_recursive_file_txt  test_archive.py  test_filter.py  test_getChecksums.py  test_hasher.py  test_mapper.py
tests/expected_outputs/: ignore_all.csv  ignore_all_except_dots.csv  include_file.csv  include_recursive_file.csv
