[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sumbuddy"]

[project]
name = "sum-buddy"
dynamic = ["version"]
authors = [
  { name="Matthew J. Thompson", email="thompson.m.j@outlook.com" },
  { name="Elizabeth G. Campolongo", email="e.campolongo479@gmail.com" },
]
description = "A command-line package to generate CSV with filepath, filename, checksum for all contents of given directory."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "tqdm",
  "pathspec"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pre-commit"
]

keywords = [
  "checksum",
  "md5",
  "deduplication",
  "imageomics",
  "metadata",
  "CSV",
  "images",
  "verifier",
  "file-verification",
]

[project.urls]
Homepage = "https://github.com/Imageomics/sum-buddy"
Repository = "https://github.com/Imageomics/sum-buddy.git"
"Bug Tracker" = "https://github.com/Imageomics/sum-buddy/issues"

[project.scripts]
sum-buddy = "sumbuddy.__main__:main"

[tool.hatch.version]
path = "src/sumbuddy/__about__.py"
